AIHUDDLE-Demo/5-deploy-application/group1/gotmining-frontend/gotminingui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gotmining
  labels:
    app: gotminingui
    app.kubernetes.io/part-of: gotmining
spec:
  host: dollyv2-gotmining-backend-group1.apps.science-cluster.sandbox2009.opentlc.com
  to:
    kind: Service
    name: gotminingui
    weight: 100
  port:
    targetPort: '3000'
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
